fix(ui): add min width to file explorer
Prevents icons from being pushed out of view.

--- a/apps/client/src/app/ide/side-bar/file-explorer/components/file-explorer/file-explorer.component.scss
+++ b/apps/client/src/app/ide/side-bar/file-explorer/components/file-explorer/file-explorer.component.scss
@@ -3,5 +3,6 @@
 	flex-direction: column;
 	height: 100%;
 	overflow: hidden;
+	min-width: 200px;
 	background-color: var(--file-explorer-bg);
 }
